--- a/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Base.lproj/Main.storyboard
@@ -17,26 +17,98 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7rC-bP-os5">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5LQ-QZ-u7s">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="3LS-E3-ffQ" customClass="PhotoCollectionViewFlowLayout" customModule="Photorama" customModuleProvider="target">
+                                    <size key="itemSize" width="90" height="90"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UICollectionViewCell" id="2N3-KF-r4h" customClass="PhotoCollectionViewCell" customModule="Photorama" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZJ5-UB-eVQ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                </imageView>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="A0L-Ja-wOx">
+                                                    <rect key="frame" x="35" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottomMargin" secondItem="ZJ5-UB-eVQ" secondAttribute="bottom" constant="-8" id="B6x-8S-5d7"/>
+                                            <constraint firstAttribute="centerY" secondItem="A0L-Ja-wOx" secondAttribute="centerY" id="U2y-s7-Cda"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="ZJ5-UB-eVQ" secondAttribute="trailing" constant="-8" id="c74-Ag-IH8"/>
+                                            <constraint firstItem="ZJ5-UB-eVQ" firstAttribute="top" secondItem="2N3-KF-r4h" secondAttribute="topMargin" constant="-8" id="mz1-YH-jTG"/>
+                                            <constraint firstItem="ZJ5-UB-eVQ" firstAttribute="leading" secondItem="2N3-KF-r4h" secondAttribute="leadingMargin" constant="-8" id="nX3-tk-pPo"/>
+                                            <constraint firstAttribute="centerX" secondItem="A0L-Ja-wOx" secondAttribute="centerX" id="rMW-8t-dN2"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="ZJ5-UB-eVQ" id="eEa-bD-Wql"/>
+                                            <outlet property="spinner" destination="A0L-Ja-wOx" id="LpU-nk-8P7"/>
+                                            <segue destination="qZm-me-aFY" kind="show" identifier="ShowPhoto" id="RYd-P9-5dl"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="7rC-bP-os5" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="EYV-ca-aSu"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="7rC-bP-os5" secondAttribute="bottom" id="ahy-Qu-ulz"/>
-                            <constraint firstItem="7rC-bP-os5" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="ggf-cm-JSh"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7rC-bP-os5" secondAttribute="trailing" constant="-16" id="z6u-gj-xWq"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="5LQ-QZ-u7s" secondAttribute="bottom" id="aDq-Bp-z6E"/>
+                            <constraint firstItem="5LQ-QZ-u7s" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="ej0-jE-U9N"/>
+                            <constraint firstItem="5LQ-QZ-u7s" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="fyb-eq-EIK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5LQ-QZ-u7s" secondAttribute="trailing" constant="-16" id="mQE-pc-Htj"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Photorama" id="663-3s-eIG"/>
                     <connections>
-                        <outlet property="imageView" destination="7rC-bP-os5" id="wWD-Fe-qWy"/>
+                        <outlet property="collectionView" destination="5LQ-QZ-u7s" id="CXU-Je-A8a"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1192" y="416"/>
+        </scene>
+        <!--Photo Info View Controller-->
+        <scene sceneID="DtF-UB-iXj">
+            <objects>
+                <viewController id="qZm-me-aFY" customClass="PhotoInfoViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qVi-4K-Qoz"/>
+                        <viewControllerLayoutGuide type="bottom" id="bOs-GU-9yG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="d2l-39-RRU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6Lp-6R-gN7">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6Lp-6R-gN7" firstAttribute="leading" secondItem="d2l-39-RRU" secondAttribute="leadingMargin" constant="-16" id="85N-dT-4Qd"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6Lp-6R-gN7" secondAttribute="trailing" constant="-16" id="S3w-wt-MsC"/>
+                            <constraint firstItem="bOs-GU-9yG" firstAttribute="top" secondItem="6Lp-6R-gN7" secondAttribute="bottom" id="sEZ-Oa-dBZ"/>
+                            <constraint firstItem="6Lp-6R-gN7" firstAttribute="top" secondItem="qVi-4K-Qoz" secondAttribute="bottom" id="uM7-0L-cC4"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="6Lp-6R-gN7" id="zw8-td-Wji"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c4v-be-Vrv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1889" y="416"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="69I-dF-9u2">
